# Python

./: Statistics.docx
DJANGO/: db.sqlite3
DJANGO/config/: settings.py
Data visualization/: categoricalplot.ipynb  distributionplots.ipynb  matplotlib.ipynb  matrixplot.ipynb  plotlyandcufflinks.ipynb  pyproject.toml  regrressionplot.ipynb
Fast API/: main.py
Numpylearn/: array2.npy  phase 1.ipynb  phase 2.ipynb  phase 3.ipynb  phase4.ipynb  pyproject.toml
Pandalearn/: Countries.ipynb  Groupbyaggregation.ipynb  Mergingjoiningconcatenation.ipynb  MissingData.ipynb  dataframes.ipynb  featureextractions.ipynb  operations.ipynb  pivottables.ipynb  pyproject.toml  series.ipynb
Programs/: Program1.py  Program2.py  Program3.py  Program4.py  Program5.py
scikitlearn/: Clustering.ipynb  Feature encoding.ipynb  Hyperparametertuning.ipynb  PCA - Principal component analysis.ipynb  Preprocessing.ipynb  Regression.ipynb  Splitting.ipynb  classification.ipynb  crossvalidation.ipynb  metrics.ipynb  pyproject.toml  sccikit basic 1 dataset.ipynb  scikit learn data extraction.ipynb
