[project]
name = "data_visualization"
version = "0.1.0"
description = ""
authors = [
    {name = "anmolguptanpj",email = "anmolguptanpj282@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "cufflinks (>=0.17.3,<0.18.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "ipython (>=9.13.0,<10.0.0)",
    "notebook (>=7.5.6,<8.0.0)"
]

[tool.poetry]
packages = [{include = "data visualization", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
