[project]
name = "pandalearn"
version = "0.1.0"
description = ""
authors = [
    {name = "anmolguptanpj",email = "anmolguptanpj282@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pandalearn", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
